--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "addAllFiles": "git add.",
     "play": "node index.js",
-    "commitWithMessage": "git commit -m \"BUILD - $1\"",
+    "commitWithMessage": "git commit -m ",
     "pushToGit": "git push -u origin main"
   },
   "keywords": [],
